--- a/templates/siswa/dashboard_siswa.html
+++ b/templates/siswa/dashboard_siswa.html
@@ -658,10 +658,10 @@
                     <i class="fas fa-question-circle"></i>
                     <span>Kuis Harian</span>
                 </button>
-                <button class="action-btn" onclick="viewRecommendations()">
+                <a class="action-btn" href="/siswa/features/rekomendasi">
                     <i class="fas fa-lightbulb"></i>
                     <span>Rekomendasi AI</span>
-                </button>
+                </a>
             </div>
         </div>
     </div>
